--- a/popup.html
+++ b/popup.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <div style="width: 300px; padding: 20px; background-color: orange;">
-        <div>
+        <div style="border: 3px solid black; border-radius: 10px; margin: 20px">
             <h1 align="center" style="font-weight: bolder; text-shadow: 2px 4px 4px rgba(46,91,173,0.6);">Untrapped</h1>
         </div>
-        <div style="font-weight: bold;">
+        <div style="font-weight: bold; border: 3px solid black; border-radius: 10px; margin: 10px; padding: 20px;">
             <div class="form-check form-switch">
                 <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" checked>
                 <label class="form-check-label" for="flexSwitchCheckChecked">Home Feed</label>
