--- a/popup.html
+++ b/popup.html
@@ -5,24 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
-<body>
-    <div style="width: 300px; padding: 20px; background-color: orange;">
-        <div style="border: 3px solid black; border-radius: 10px; margin: 20px">
-            <h1 align="center" style="font-weight: bolder; text-shadow: 2px 4px 4px rgba(46,91,173,0.6);">Untrapped</h1>
-        </div>
-        <div style="font-weight: bold; border: 3px solid black; border-radius: 10px; margin: 10px; padding: 20px;">
-            <div class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" checked>
-                <label class="form-check-label" for="flexSwitchCheckChecked">Home Feed</label>
-            </div>
-            <div class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" checked>
-                <label class="form-check-label" for="flexSwitchCheckChecked">Recommended Videos</label>
-            </div>
-        </div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<body width="600px">
+    <h1 align="center">Untrapped</h1>
+
+    <input type="checkbox" id="homeFeed">
+    <label for="homeFeed">Home Feed</label>
+
+    <br>
+
+    <input type="checkbox" id="recommendedVideos">
+    <label for="recommendedVideos">Recommended Videos</label>
+    <script src="/popup.js" type="text/javascript"></script>
 </body>
 </html>
