Update content.js, add logic for hiding the shorts section

--- a/popup.html
+++ b/popup.html
@@ -20,6 +20,10 @@
                 <input class="form-check-input" type="checkbox" id="recommendedVideos" checked>
                 <label class="form-check-label" for="flexSwitchCheckChecked">Recommended Videos</label>
             </div>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="shorts" checked>
+                <label class="form-check-label" for="flexSwitchCheckChecked">Shorts Tab</label>
+            </div>
         </div>
     </div>
     <script src="/popup.js" type="text/javascript"></script>
