Add support for hiding comments

--- a/popup.html
+++ b/popup.html
@@ -17,12 +17,16 @@
                 <label class="form-check-label" for="flexSwitchCheckChecked">Home Feed</label>
             </div>
             <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="shorts" checked>
+                <label class="form-check-label" for="flexSwitchCheckChecked">Shorts Tab</label>
+            </div>
+            <div class="form-check form-switch">
                 <input class="form-check-input" type="checkbox" id="recommendedVideos" checked>
                 <label class="form-check-label" for="flexSwitchCheckChecked">Recommended Videos</label>
             </div>
             <div class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" id="shorts" checked>
-                <label class="form-check-label" for="flexSwitchCheckChecked">Shorts Tab</label>
+                <input class="form-check-input" type="checkbox" id="commentSection" checked>
+                <label class="form-check-label" for="flexSwitchCheckChecked">Comment Section</label>
             </div>
         </div>
     </div>
