Add support for hiding live chat section

--- a/popup.html
+++ b/popup.html
@@ -28,6 +28,10 @@
                 <input class="form-check-input" type="checkbox" id="commentSection" checked>
                 <label class="form-check-label" for="flexSwitchCheckChecked">Comment Section</label>
             </div>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="liveChat" checked>
+                <label class="form-check-label" for="flexSwitchCheckChecked">Live Chat</label>
+            </div>
         </div>
     </div>
     <script src="/popup.js" type="text/javascript"></script>
