--- a/popup.html
+++ b/popup.html
@@ -23,6 +23,10 @@
                     <input class="form-check-input" type="checkbox" id="shorts" checked>
                     <label class="form-check-label" for="flexSwitchCheckChecked">Shorts Tab</label>
                 </div>
+                <div class="form-check form-switch">
+                    <input class="form-check-input" type="checkbox" id="ad" checked>
+                    <label class="form-check-label" for="flexSwitchCheckChecked">Ad Banner</label>
+                </div>
             </div>
             <div style="border: 5px solid white; padding: 10px; border-radius: 10px; margin-top: 15px;">
                 <h6 style="font-weight: bolder; color: purple;">Video Player</h6>
