--- a/popup.html
+++ b/popup.html
@@ -1,52 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<body width="1000px">
-    <div style="width: 300px; padding: 20px; background-color: orange;">
-        <div>
-            <h1 align="center" style="font-weight: bolder; text-shadow: 2px 4px 4px rgba(46,91,173,0.6);">Untrapped</h1>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body width="1000px">
+    <div style="width: 300px; padding: 20px; background-color: orange">
+      <div>
+        <h1
+          align="center"
+          style="
+            font-weight: bolder;
+            text-shadow: 2px 4px 4px rgba(46, 91, 173, 0.6);
+          "
+        >
+          Untrapped
+        </h1>
+      </div>
+      <div style="font-weight: bold">
+        <div
+          style="
+            border: 5px solid white;
+            padding: 10px;
+            border-radius: 10px;
+            margin-bottom: 15px;
+          "
+        >
+          <h6 style="font-weight: bolder; color: purple">Home Page</h6>
+          <div class="form-check form-switch">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              id="homeFeed"
+              checked
+            />
+            <label class="form-check-label" for="flexSwitchCheckChecked"
+              >Home Feed</label
+            >
+          </div>
+          <div class="form-check form-switch">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              id="shorts"
+              checked
+            />
+            <label class="form-check-label" for="flexSwitchCheckChecked"
+              >Shorts Tab</label
+            >
+          </div>
+          <div class="form-check form-switch">
+            <input class="form-check-input" type="checkbox" id="ad" checked />
+            <label class="form-check-label" for="flexSwitchCheckChecked"
+              >Ad Banner</label
+            >
+          </div>
         </div>
-        <div style="font-weight: bold;">
-            <div style="border: 5px solid white; padding: 10px; border-radius: 10px; margin-bottom: 15px;">
-                <h6 style="font-weight: bolder; color: purple;">Home Page</h6>
-                <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" id="homeFeed" checked>
-                    <label class="form-check-label" for="flexSwitchCheckChecked">Home Feed</label>
-                </div>
-                <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" id="shorts" checked>
-                    <label class="form-check-label" for="flexSwitchCheckChecked">Shorts Tab</label>
-                </div>
-                <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" id="ad" checked>
-                    <label class="form-check-label" for="flexSwitchCheckChecked">Ad Banner</label>
-                </div>
-            </div>
-            <div style="border: 5px solid white; padding: 10px; border-radius: 10px; margin-top: 15px;">
-                <h6 style="font-weight: bolder; color: purple;">Video Player</h6>
-                <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" id="recommendedVideos" checked>
-                    <label class="form-check-label" for="flexSwitchCheckChecked">Recommended Videos</label>
-                </div>
-                <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" id="commentSection" checked>
-                    <label class="form-check-label" for="flexSwitchCheckChecked">Comment Section</label>
-                </div>
-                <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" id="liveChat" checked>
-                    <label class="form-check-label" for="flexSwitchCheckChecked">Live Chat</label>
-                </div>
-            </div>
+        <div
+          style="
+            border: 5px solid white;
+            padding: 10px;
+            border-radius: 10px;
+            margin-top: 15px;
+          "
+        >
+          <h6 style="font-weight: bolder; color: purple">Video Player</h6>
+          <div class="form-check form-switch">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              id="recommendedVideos"
+              checked
+            />
+            <label class="form-check-label" for="flexSwitchCheckChecked"
+              >Recommended Videos</label
+            >
+          </div>
+          <div class="form-check form-switch">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              id="commentSection"
+              checked
+            />
+            <label class="form-check-label" for="flexSwitchCheckChecked"
+              >Comment Section</label
+            >
+          </div>
+          <div class="form-check form-switch">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              id="liveChat"
+              checked
+            />
+            <label class="form-check-label" for="flexSwitchCheckChecked"
+              >Live Chat</label
+            >
+          </div>
         </div>
-        <a href="https://github.com/KishanKokal/Untrapped" target="_blank">Link to Github Repository</a>
+      </div>
+      <a href="https://github.com/KishanKokal/Untrapped" target="_blank"
+        >Link to Github Repository</a
+      >
     </div>
     <script src="/popup.js" type="text/javascript"></script>
     <script src="/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-</body>
+  </body>
 </html>
