Add github link to the extension

--- a/popup.html
+++ b/popup.html
@@ -112,9 +112,20 @@
           </div>
         </div>
       </div>
-      <a href="https://github.com/KishanKokal/Untrapped" target="_blank"
-        >Link to Github Repository</a
-      >
+      <div style="display: flex; justify-content: center; color: black">
+        <a
+          href="https://github.com/KishanKokal/Untrapped"
+          target="_blank"
+          style="
+            text-decoration: underline;
+            color: black;
+            margin-top: 10px;
+            font-weight: bolder;
+          "
+        >
+          GitHub
+        </a>
+      </div>
     </div>
     <script src="/popup.js" type="text/javascript"></script>
     <script src="/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
